--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,213 @@
-/*
- * Estilos de tu proyecto
- */
+* {
+	margin: 0px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+header{
+	background-color: #2c3e50;
+	display: flex;
+	height: 80px;
+	align-items: center;
+	justify-content: space-between;
+	vertical-align: middle;
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+	font-size: 25px;
+	font-weight: bold;
+	box-sizing: border-box;
+}
+
+.start {
+	font-size: 26px;
+	padding-left: 170px;
+}
+
+.buttons {
+	font-size: 16px;
+	justify-content: space-between;
+	padding-right: 180px;
+}
+
+.portfolio-button, .about-button, .contact-button {
+	padding-left: 10px;
+}
+
+.banner {
+	background-color: #18bc9c;
+	color: white;
+	justify-content: center;
+	text-align: center;
+	box-sizing: border-box;
+}
+
+img.profile {
+	width: 230px;
+}
+.profile {
+	padding-top: 95px;
+}
+
+h1 {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 67px;
+	padding-top: 25px;
+	padding-bottom: 20px;
+}
+
+.icon-star{
+	font-size: 30px;
+	text-align: center;
+}
+
+.description {
+	font-family: 'Lato', sans-serif;
+	font-size: 25px;
+	padding-top: 15px;
+	padding-bottom: 90px;
+}
+
+.portfolio{
+	height: 790px;
+	align-items: center;
+	text-align: center;
+	box-sizing: border-box;
+	vertical-align: middle;
+}
+
+h2 {
+	font-size: 45px;
+	padding-top: 85px;
+	padding-bottom: 8px;
+	text-align: center;
+}
+
+.cabin, .cake, .circus, .game, .safe, .submarine {
+	width: 310px;
+	align-items: center;
+	justify-content: space-between;
+	vertical-align: middle;
+	padding-top: 5px;
+	padding-right: 14px;
+	padding-left: 14px;
+	padding-bottom: 25px;
+}
+
+
+.about {
+	background-color: #18bc9c;
+	height: 520px;
+	color: white;
+	align-items: center;
+	text-align: center;
+	box-sizing: border-box;
+	vertical-align: middle;
+}
+
+.text-about {
+	font-family: 'Lato', sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	align-items: center;
+	justify-content: space-between;
+	display: inline-flex;
+	flex-direction: row;
+	width: 350px;
+	padding-top: 5px;
+}
+
+.download-buttom {
+	font-family: 'Lato', sans-serif;
+	font-size: 18px;
+  border: 2px solid white;
+	border-radius: 5px;
+	display: inline-flex;
+	margin: 40px;
+	padding: 12px;
+	justify-content: space-between;
+}
+
+.download {
+	font-family: 'Lato', sans-serif;
+	font-size: 18px;
+}
+
+.contact {
+	height: 800px;
+	justify-content: center;
+	vertical-align: middle;
+	align-content: center;
+	text-align: center;
+	box-sizing: border-box;
+}
+
+.info {
+	width: 700px;
+	margin: 0 auto;
+	justify-content: center;
+	vertical-align: middle;
+	align-content: center;
+	text-align: center;
+	box-sizing: border-box;
+}
+
+.fname, .email, .phone, .subject {
+	border: 1px solid white;
+	border-bottom: 2px solid lightgray;
+	font-family: 'Lato', sans-serif;
+	font-size: 20px;
+	font-weight: bold;
+	padding: 10px;
+	width: 670px;
+	height: 85px;
+	justify-content: center;
+	text-align: left;
+	box-sizing: border-box;
+}
+
+.subject {
+	height: 85px;
+	height: 185px;
+	justify-content: right;
+}
+
+.send-buttom{
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+	background-color: #18bc9c;
+	text-align: center;
+	height: 40px;
+	width: 70px;
+	margin: 25px;
+	display: inline-block;
+	border-radius: 4px;
+}
+
+h4{
+	font-size: 30px;
+	text-align: center;
+}
+
+footer{
+	padding: 35px;
+	font-size: 10px;
+	background-color: #2c3e50;
+	color: white;
+	height: 300px;
+	text-align: center; 
+	display: flow-root;
+}
+
+.address, .social-media, .about-us {
+	width: 350px;
+	font-size: 20px;
+	font-family: 'Lato', sans-serif;
+	display: inline-grid;
+}
+
+.end{
+	padding: 35px;
+	font-size: 16px;
+	font-family: 'Lato', sans-serif;
+	text-align: center;
+}
